napravljen prvi zadatak

--- a/vjezbe 1/output/zadatak1.dSYM/Contents/Resources/Relocations/aarch64/zadatak1.yml
+++ b/vjezbe 1/output/zadatak1.dSYM/Contents/Resources/Relocations/aarch64/zadatak1.yml
@@ -1,5 +1,5 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     '/Users/franeatlaga/Desktop/SP/vjezbe 1/output/zadatak1'
+binary-path:     '/Users/franeatlaga/Desktop/Strukture Podataka/vjezbe 1/output/zadatak1'
 relocations:     []
 ...
